--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,3 +189,15 @@ footer {
   bottom: 80px;
   z-index: 10;
 }
+
+@media only screen and (max-width: 960px) {
+ 
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 640px) {
+
+}
