--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@ a {
 
 header {
   background-color: #ffffff;
-  height: 100px;
+  height: 70px;
   padding: 0px;
-  border-bottom: solid 1px #dddddd;
+  border-bottom: solid 2px #dddddd;
   }
 
 button {
@@ -84,11 +84,10 @@ footer {
   border: solid 1px #dddddd;
   text-align: center;
   float: left;
-  margin-top: 29px
 }
 
 .tab {
-  margin-top: 39px;
+  margin-top: 25px;
   display: inline-block;
   font-size: 20px;
 }
@@ -102,8 +101,8 @@ footer {
 }
 
 .tab_holder {
-  height: 100px;
-  width: 500px;
+  height: 70px;
+  width: 300px;
   background-color: #ffffff;
   text-align: center;
   float: right;
@@ -190,14 +189,34 @@ footer {
   z-index: 10;
 }
 
-@media only screen and (max-width: 960px) {
- 
+@media only screen and (max-width: 980px) {
+  .main {
+    width: 60%;
+    background: red;
+    float: left;
+    margin-left: 40px;
+  }
+  .tab_positioner {
+    width: 40px;
+  }
+  .bio {
+    font-size: 15px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-
+  .main {
+    width: 90%;
+    background: blue;
+  }
 }
 
 @media only screen and (max-width: 640px) {
-
+  .main {
+    width: 100%;
+    background: violet;
+  }
+  header {
+    position: static;
+  }
 }
