--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ html,body{
   height: 100%;
 }
 
+body {
+  background-image: url("../images/gravel/gravel.png");
+}
+
 h1 {
   display: inline-block;
   color: #ffffff;
@@ -54,6 +58,11 @@ footer {
   text-align: center;
   color: black;
   font-size: 10px;
+  z-index: 10;
+}
+
+.small {
+  display: none;
 }
 
 .line {
@@ -108,19 +117,9 @@ footer {
   float: right;
 }
 
-.background {
-  margin: 0 auto;
-  min-height: 90%;
-  width: 100%;
-  background-image: url("../images/gravel/gravel.png");
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.25em;
-  text-align: center;
-  }
 
 .main {
   width: 800px;
-  height: 400px;
   padding: 25px;
   background-color: #ffffff;
   text-align: left;
@@ -186,13 +185,12 @@ footer {
   left: 50%;
   margin-left: -70px;
   bottom: 80px;
-  z-index: 10;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 980px) {
   .main {
     width: 60%;
-    background: red;
     float: left;
     margin-left: 40px;
   }
@@ -207,16 +205,63 @@ footer {
 @media only screen and (max-width: 768px) {
   .main {
     width: 90%;
-    background: blue;
+    float: none;
+    margin-left: 10px;
+  }
+  .tab_positioner {
+    width: 10px;
   }
 }
 
 @media only screen and (max-width: 640px) {
   .main {
-    width: 100%;
-    background: violet;
+    margin: 10px;
+    width: 570px;
+    text-align: center;
+  }
+  .pic {
+    height: 300px;
+    width: 300px;
+    float: none;
+  }
+  .tab_positioner {
+    display: none;
+  }
+  .title_tab {
+    width: 640px;
+  }
+  .tab_holder {
+    height: 70px;
+    width: 640px;
+    text-align: center;
+    float: left;
   }
   header {
     position: static;
+  }
+  .portfolio_container {
+    float: none;
+  }
+  .small {
+    display: block;
+  }
+  .portfolio_pic {
+    width: 100%;
+    height: 300px;
+  }
+  .banner {
+    height: 25px;
+    width: 570px;
+    color: #ffffff;
+    font-size: 20px;
+    left: 82px;
+    margin-left: -70px;
+    bottom: 60px;
+  }
+  .contact_input {
+    width: 100%;
+  }
+  .contact {
+    float: left;
   }
 }
