--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,9 @@ footer {
   text-align: left;
   display: inline-block;
   margin-top: 20px;
+  margin-left: 8%;
   border: solid 2px #dddddd;
+  float: none;
 }
 
 .contact_input {
@@ -214,6 +216,12 @@ footer {
 }
 
 @media only screen and (max-width: 640px) {
+  body {
+    padding-bottom: 200px;
+  }
+  header {
+    position: static;
+  }
   .main {
     margin: 10px;
     width: 570px;
@@ -235,9 +243,6 @@ footer {
     width: 640px;
     text-align: center;
     float: left;
-  }
-  header {
-    position: static;
   }
   .portfolio_container {
     float: none;
