--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,16 @@ footer {
   z-index: 10;
 }
 
+.splash {
+  background-image: url(../images/splash_images/IMG_0773.jpg);
+  background-size: 100%;
+  text-align: center;
+}
+
+.splash_title {
+  margin-top: 50%;
+}
+
 .small {
   display: none;
 }
