--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,17 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
+  display: relative;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0;
+  animation-name: fadeout;
+  animation-duration: 5s;
+  position: absolute;
 }
 
 .splash_title {
@@ -83,6 +94,9 @@ footer {
   padding: 30px;
   border: solid 2px #dddddd;
   font-family: Helvetica, Arial, sans-serif;
+  animation-name: fadein;
+  animation-duration: 5s;
+  position: absolute;
 }
 
 .splash_title p {
@@ -241,6 +255,16 @@ footer {
   margin-left: -70px;
   bottom: 80px;
   z-index: 1;
+}
+
+@keyframes fadeout {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+@keyframes fadein {
+  0% {opacity: 0; padding: 300px;}
+  100% {opacity: 1; padding: 30px;}
 }
 
 @media only screen and (max-width: 980px) {
